# application-services

./: .buildconfig-android.yml  .gitignore  CHANGES_UNRELEASED.md  Cargo.toml  build-carthage.sh  glean-patch.patch
automation/: tests.py
book/: print.html  searchindex.js  searchindex.json
book/adr/: index.html
book/rust-docs/: search-index.js
book/rust-docs/push/: index.html
book/rust-docs/tabs/: struct.RemoteTab.html
build-scripts/: substitute-local-appservices.gradle  xc-universal-binary.sh
components/device-commands/: Cargo.toml  build.rs  uniffi.toml
components/device-commands/ios/: DeviceCommands.swift
components/device-commands/src/: device_commands.udl  lib.rs
components/fxa-client/: Cargo.toml
components/fxa-client/src/: fxa_client.udl  push.rs  telemetry.rs
components/glean/: build.gradle
components/logins/: Cargo.toml
components/logins/android/: build.gradle
components/logins/src/: engine.rs  error.rs  logins.udl  migrate_sqlcipher_db.rs  store.rs
components/nimbus/src/: enrollment.rs  evaluator.rs  lib.rs  persistence.rs
components/places/: Cargo.toml
components/places/android/: build.gradle
components/places/ffi/: Cargo.toml
components/places/src/: ffi.rs  places.udl
components/push/src/: subscriber.rs  (+1 more)
components/storage-sync/: Cargo.toml
components/tabs/: Cargo.toml
components/webext-storage/: Cargo.toml
components/webext-storage/src/: api.rs  db.rs  error.rs
docs/: adding-docs.md
docs/adr/: 0001-update-logins-api.md  0003-swift-packaging.md  README.md
libs/: build-all.sh
megazords/full/: Cargo.toml
(+45 files in other folders)
